k8s/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - name: frontend-srv
      port: 80
      targetPort: 80
      protocol: TCP
