k8s/frontend/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-fast.ddns.net
    http:
      paths:
        - backend:
            service:
              name: frontend-service
              port:
                name: frontend-srv
          path: /
          pathType: Prefix
